--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -22,4 +22,5 @@ jobs:
       - run: git push
       - run: curl -s https://api.github.com/repos/keepassxreboot/keepassxc/releases/latest | grep tag_name | cut -d '"' -f 4 | xargs printf "keepassxc_version=%s" >> $GITHUB_ENV
       - run: echo "${{ env.keepassxc_version }}" | cmp keepassxc.txt - || echo keepassxc_updated=true >> $GITHUB_ENV
-      - run: echo "${{ env.keepassxc_updated }}"
+      - run: echo Keepassxc updated
+        if: ${{ env.keepassxc_updated == true }}
