--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -4,6 +4,7 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     env:
+      TXT: keepassxc.txt
       URL: https://api.github.com/repos/keepassxreboot/keepassxc/releases/latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
@@ -23,8 +24,14 @@ jobs:
       - run: git commit -am "Test"
       - run: git push
       - run: curl -s $URL | grep tag_name | cut -d '"' -f 4 | xargs printf "keepassxc_version=%s" >> $GITHUB_ENV
-      - run: echo "${{ env.keepassxc_version }}" | cmp keepassxc.txt - || echo keepassxc_updated=true >> $GITHUB_ENV
+      - run: echo "${{ env.keepassxc_version }}" | cmp $TXT - || echo keepassxc_updated=true >> $GITHUB_ENV
       - run: echo Keepassxc updated
         if: ${{ env.keepassxc_updated == true }}
       - run: echo Keepassxc not updated
         if: ${{ env.keepassxc_updated == false }}
+  Hugo-Test:
+    runs:
+      using: docker
+      image: hugo:latest
+    steps:
+      - run: hugo version
