--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -32,6 +32,6 @@ jobs:
   Hugo-Test:
     runs-on: ubuntu-latest
     container:
-      image: hugo:latest
+      image: gohugoio/hugo:latest
     steps:
       - run: hugo version
