--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -33,5 +33,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: curl -OL https://github.com/gohugoio/hugo/releases/download/v0.83.1/hugo_0.83.1_Linux-64bit.tar.gz
-      - run: tar -xzvf hugo_0.83.1_Linux-64bit.tar.gz
+      - run: tar -xzvf hugo*.tar.gz hugo
       - run: ./hugo version
